--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,38 +2,28 @@ name: CI
 
 on:
   push:
-    branches: [main, develop, staging]
+    branches:
+      - main
+      - staging
+      - dev
+      - "feature/**"
+      - "hotfix/**"
   pull_request:
+    branches:
+      - main
+      - staging
+      - dev
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build-test:
+  quality:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_USER: ledgerlite
-          POSTGRES_PASSWORD: ledgerlite
-          POSTGRES_DB: ledgerlite
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U ledgerlite"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-      redis:
-        image: redis:7
-        ports:
-          - 6379:6379
 
     env:
       DATABASE_URL: postgresql://ledgerlite:ledgerlite@localhost:5432/ledgerlite
-      API_JWT_SECRET: ci_access_secret
-      API_JWT_REFRESH_SECRET: ci_refresh_secret
-      API_JWT_ACCESS_TTL: 900
-      API_JWT_REFRESH_TTL: 1209600
-      API_CORS_ORIGIN: http://localhost:3000
       NEXT_PUBLIC_API_BASE_URL: http://localhost:4000
 
     steps:
@@ -45,13 +35,9 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
-      - run: pnpm install
-      - run: pnpm --filter @ledgerlite/shared build
-      - run: pnpm --filter @ledgerlite/web build
+
+      - run: pnpm install --frozen-lockfile
       - run: pnpm --filter @ledgerlite/api db:generate
-      - run: pnpm --filter @ledgerlite/api db:migrate
       - run: pnpm lint
       - run: pnpm typecheck
-      - run: pnpm -C apps/api exec jest --config jest.config.js --runInBand
-      - run: pnpm -C apps/web exec playwright install --with-deps
-      - run: pnpm -C apps/web exec playwright test
+      - run: pnpm build
