--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -25,6 +25,8 @@ services:
     build:
       context: .
       dockerfile: apps/web/Dockerfile
+      args:
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://localhost:4000}
     env_file:
       - .env.staging
     ports:
