ci: fully automate env-driven EC2 deploys

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -13,6 +13,7 @@ SENTRY_DSN=
 SENTRY_ENVIRONMENT=production
 
 # DB (same password as db service in docker-compose.prod.yml)
+POSTGRES_PASSWORD=replace_with_db_password
 DATABASE_URL=postgresql://ledgerlite:replace_with_db_password@db:5432/ledgerlite
 
 # WEB
