--- a/.env.development.example
+++ b/.env.development.example
@@ -13,6 +13,7 @@ SENTRY_DSN=
 SENTRY_ENVIRONMENT=development
 
 # DB (same password as db service in docker-compose.development.yml)
+POSTGRES_PASSWORD=replace_with_db_password
 DATABASE_URL=postgresql://ledgerlite:replace_with_db_password@db:5432/ledgerlite_dev
 
 # WEB
