--- a/.env.staging.example
+++ b/.env.staging.example
@@ -13,6 +13,7 @@ SENTRY_DSN=
 SENTRY_ENVIRONMENT=staging
 
 # DB (same password as db service in docker-compose.staging.yml)
+POSTGRES_PASSWORD=replace_with_db_password
 DATABASE_URL=postgresql://ledgerlite:replace_with_db_password@db:5432/ledgerlite_staging
 
 # WEB
