--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,13 +44,29 @@ jobs:
               git stash push -m "ci-auto-stash-before-deploy" || true
             fi
             git pull --ff-only origin "${{ secrets.DEPLOY_BRANCH }}"
+            ENV_FILE="${{ secrets.ENV_FILE_NAME }}"
+            if [ -z "$ENV_FILE" ]; then
+              case "${{ secrets.DEPLOY_BRANCH }}" in
+                dev) ENV_FILE=".env.development" ;;
+                staging) ENV_FILE=".env.staging" ;;
+                main) ENV_FILE=".env.prod" ;;
+                *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
+              esac
+            fi
+            if [ -n "${{ secrets.ENV_FILE_CONTENT_B64 }}" ]; then
+              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE"
+              chmod 600 "$ENV_FILE"
+            fi
+            if [ ! -f "$ENV_FILE" ]; then
+              echo "Missing env file: $ENV_FILE"
+              exit 1
+            fi
             set -a
-            [ -f .env.development ] && . ./.env.development || true
-            [ -f .env.staging ] && . ./.env.staging || true
-            [ -f .env.prod ] && . ./.env.prod || true
+            . "./$ENV_FILE"
             set +a
-            docker compose -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
-            docker compose -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
+            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
             docker image prune -f
 
   deploy_staging:
@@ -75,13 +91,29 @@ jobs:
               git stash push -m "ci-auto-stash-before-deploy" || true
             fi
             git pull --ff-only origin "${{ secrets.DEPLOY_BRANCH }}"
+            ENV_FILE="${{ secrets.ENV_FILE_NAME }}"
+            if [ -z "$ENV_FILE" ]; then
+              case "${{ secrets.DEPLOY_BRANCH }}" in
+                dev) ENV_FILE=".env.development" ;;
+                staging) ENV_FILE=".env.staging" ;;
+                main) ENV_FILE=".env.prod" ;;
+                *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
+              esac
+            fi
+            if [ -n "${{ secrets.ENV_FILE_CONTENT_B64 }}" ]; then
+              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE"
+              chmod 600 "$ENV_FILE"
+            fi
+            if [ ! -f "$ENV_FILE" ]; then
+              echo "Missing env file: $ENV_FILE"
+              exit 1
+            fi
             set -a
-            [ -f .env.development ] && . ./.env.development || true
-            [ -f .env.staging ] && . ./.env.staging || true
-            [ -f .env.prod ] && . ./.env.prod || true
+            . "./$ENV_FILE"
             set +a
-            docker compose -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
-            docker compose -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
+            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
             docker image prune -f
 
   deploy_production:
@@ -106,11 +138,27 @@ jobs:
               git stash push -m "ci-auto-stash-before-deploy" || true
             fi
             git pull --ff-only origin "${{ secrets.DEPLOY_BRANCH }}"
+            ENV_FILE="${{ secrets.ENV_FILE_NAME }}"
+            if [ -z "$ENV_FILE" ]; then
+              case "${{ secrets.DEPLOY_BRANCH }}" in
+                dev) ENV_FILE=".env.development" ;;
+                staging) ENV_FILE=".env.staging" ;;
+                main) ENV_FILE=".env.prod" ;;
+                *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
+              esac
+            fi
+            if [ -n "${{ secrets.ENV_FILE_CONTENT_B64 }}" ]; then
+              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE"
+              chmod 600 "$ENV_FILE"
+            fi
+            if [ ! -f "$ENV_FILE" ]; then
+              echo "Missing env file: $ENV_FILE"
+              exit 1
+            fi
             set -a
-            [ -f .env.development ] && . ./.env.development || true
-            [ -f .env.staging ] && . ./.env.staging || true
-            [ -f .env.prod ] && . ./.env.prod || true
+            . "./$ENV_FILE"
             set +a
-            docker compose -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
-            docker compose -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
+            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
             docker image prune -f
