feat: improve org setup UX and deploy build visibility

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -18,3 +18,4 @@ DATABASE_URL=postgresql://ledgerlite:replace_with_db_password@db:5432/ledgerlite
 
 # WEB
 NEXT_PUBLIC_API_BASE_URL=https://api.example.com
+NEXT_PUBLIC_APP_VERSION=prod-local
