--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
             set -a
             . "./$ENV_FILE"
             set +a
+            export NEXT_PUBLIC_APP_VERSION="${{ github.sha }}"
             docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
             docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
             curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
@@ -111,6 +112,7 @@ jobs:
             set -a
             . "./$ENV_FILE"
             set +a
+            export NEXT_PUBLIC_APP_VERSION="${{ github.sha }}"
             docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
             docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
             curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
@@ -158,6 +160,7 @@ jobs:
             set -a
             . "./$ENV_FILE"
             set +a
+            export NEXT_PUBLIC_APP_VERSION="${{ github.sha }}"
             docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
             docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
             curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
