--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -27,6 +27,7 @@ services:
       dockerfile: apps/web/Dockerfile
       args:
         NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:?NEXT_PUBLIC_API_BASE_URL is required}
+        NEXT_PUBLIC_APP_VERSION: ${NEXT_PUBLIC_APP_VERSION:-local-staging}
     env_file:
       - .env.staging
     ports:
