--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,29 +44,34 @@ jobs:
               git stash push -m "ci-auto-stash-before-deploy" || true
             fi
             git pull --ff-only origin "${{ secrets.DEPLOY_BRANCH }}"
-            ENV_FILE="${{ secrets.ENV_FILE_NAME }}"
-            if [ -z "$ENV_FILE" ]; then
-              case "${{ secrets.DEPLOY_BRANCH }}" in
-                dev) ENV_FILE=".env.development" ;;
-                staging) ENV_FILE=".env.staging" ;;
-                main) ENV_FILE=".env.prod" ;;
-                *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
-              esac
+            ENV_FILE_PATH="${{ secrets.ENV_FILE_PATH }}"
+            if [ -z "$ENV_FILE_PATH" ]; then
+              ENV_FILE_NAME="${{ secrets.ENV_FILE_NAME }}"
+              if [ -z "$ENV_FILE_NAME" ]; then
+                case "${{ secrets.DEPLOY_BRANCH }}" in
+                  dev) ENV_FILE_NAME=".env.development" ;;
+                  staging) ENV_FILE_NAME=".env.staging" ;;
+                  main) ENV_FILE_NAME=".env.prod" ;;
+                  *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
+                esac
+              fi
+              ENV_FILE_PATH="../$ENV_FILE_NAME"
             fi
             if [ -n "${{ secrets.ENV_FILE_CONTENT_B64 }}" ]; then
-              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE"
-              chmod 600 "$ENV_FILE"
+              mkdir -p "$(dirname "$ENV_FILE_PATH")"
+              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE_PATH"
+              chmod 600 "$ENV_FILE_PATH"
             fi
-            if [ ! -f "$ENV_FILE" ]; then
-              echo "Missing env file: $ENV_FILE"
+            if [ ! -f "$ENV_FILE_PATH" ]; then
+              echo "Missing env file: $ENV_FILE_PATH"
               exit 1
             fi
             set -a
-            . "./$ENV_FILE"
+            . "$ENV_FILE_PATH"
             set +a
             export NEXT_PUBLIC_APP_VERSION="${{ github.sha }}"
-            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
-            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            docker compose --env-file "$ENV_FILE_PATH" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
+            docker compose --env-file "$ENV_FILE_PATH" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
             curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
             docker image prune -f
 
@@ -92,29 +97,34 @@ jobs:
               git stash push -m "ci-auto-stash-before-deploy" || true
             fi
             git pull --ff-only origin "${{ secrets.DEPLOY_BRANCH }}"
-            ENV_FILE="${{ secrets.ENV_FILE_NAME }}"
-            if [ -z "$ENV_FILE" ]; then
-              case "${{ secrets.DEPLOY_BRANCH }}" in
-                dev) ENV_FILE=".env.development" ;;
-                staging) ENV_FILE=".env.staging" ;;
-                main) ENV_FILE=".env.prod" ;;
-                *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
-              esac
+            ENV_FILE_PATH="${{ secrets.ENV_FILE_PATH }}"
+            if [ -z "$ENV_FILE_PATH" ]; then
+              ENV_FILE_NAME="${{ secrets.ENV_FILE_NAME }}"
+              if [ -z "$ENV_FILE_NAME" ]; then
+                case "${{ secrets.DEPLOY_BRANCH }}" in
+                  dev) ENV_FILE_NAME=".env.development" ;;
+                  staging) ENV_FILE_NAME=".env.staging" ;;
+                  main) ENV_FILE_NAME=".env.prod" ;;
+                  *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
+                esac
+              fi
+              ENV_FILE_PATH="../$ENV_FILE_NAME"
             fi
             if [ -n "${{ secrets.ENV_FILE_CONTENT_B64 }}" ]; then
-              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE"
-              chmod 600 "$ENV_FILE"
+              mkdir -p "$(dirname "$ENV_FILE_PATH")"
+              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE_PATH"
+              chmod 600 "$ENV_FILE_PATH"
             fi
-            if [ ! -f "$ENV_FILE" ]; then
-              echo "Missing env file: $ENV_FILE"
+            if [ ! -f "$ENV_FILE_PATH" ]; then
+              echo "Missing env file: $ENV_FILE_PATH"
               exit 1
             fi
             set -a
-            . "./$ENV_FILE"
+            . "$ENV_FILE_PATH"
             set +a
             export NEXT_PUBLIC_APP_VERSION="${{ github.sha }}"
-            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
-            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            docker compose --env-file "$ENV_FILE_PATH" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
+            docker compose --env-file "$ENV_FILE_PATH" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
             curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
             docker image prune -f
 
@@ -140,28 +150,33 @@ jobs:
               git stash push -m "ci-auto-stash-before-deploy" || true
             fi
             git pull --ff-only origin "${{ secrets.DEPLOY_BRANCH }}"
-            ENV_FILE="${{ secrets.ENV_FILE_NAME }}"
-            if [ -z "$ENV_FILE" ]; then
-              case "${{ secrets.DEPLOY_BRANCH }}" in
-                dev) ENV_FILE=".env.development" ;;
-                staging) ENV_FILE=".env.staging" ;;
-                main) ENV_FILE=".env.prod" ;;
-                *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
-              esac
+            ENV_FILE_PATH="${{ secrets.ENV_FILE_PATH }}"
+            if [ -z "$ENV_FILE_PATH" ]; then
+              ENV_FILE_NAME="${{ secrets.ENV_FILE_NAME }}"
+              if [ -z "$ENV_FILE_NAME" ]; then
+                case "${{ secrets.DEPLOY_BRANCH }}" in
+                  dev) ENV_FILE_NAME=".env.development" ;;
+                  staging) ENV_FILE_NAME=".env.staging" ;;
+                  main) ENV_FILE_NAME=".env.prod" ;;
+                  *) echo "Unable to infer env file for branch '${{ secrets.DEPLOY_BRANCH }}'"; exit 1 ;;
+                esac
+              fi
+              ENV_FILE_PATH="../$ENV_FILE_NAME"
             fi
             if [ -n "${{ secrets.ENV_FILE_CONTENT_B64 }}" ]; then
-              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE"
-              chmod 600 "$ENV_FILE"
+              mkdir -p "$(dirname "$ENV_FILE_PATH")"
+              printf '%s' "${{ secrets.ENV_FILE_CONTENT_B64 }}" | base64 -d > "$ENV_FILE_PATH"
+              chmod 600 "$ENV_FILE_PATH"
             fi
-            if [ ! -f "$ENV_FILE" ]; then
-              echo "Missing env file: $ENV_FILE"
+            if [ ! -f "$ENV_FILE_PATH" ]; then
+              echo "Missing env file: $ENV_FILE_PATH"
               exit 1
             fi
             set -a
-            . "./$ENV_FILE"
+            . "$ENV_FILE_PATH"
             set +a
             export NEXT_PUBLIC_APP_VERSION="${{ github.sha }}"
-            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
-            docker compose --env-file "$ENV_FILE" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
+            docker compose --env-file "$ENV_FILE_PATH" -f "${{ secrets.COMPOSE_FILE }}" up -d --build --remove-orphans
+            docker compose --env-file "$ENV_FILE_PATH" -f "${{ secrets.COMPOSE_FILE }}" exec -T api pnpm exec prisma migrate deploy
             curl -fsS "http://127.0.0.1:${API_PORT:-4000}/health" >/dev/null
             docker image prune -f
