--- a/.env.development.example
+++ b/.env.development.example
@@ -9,6 +9,7 @@ API_JWT_REFRESH_TTL=1209600
 API_CORS_ORIGIN=https://dev-app.example.com
 WEB_BASE_URL=https://dev-app.example.com
 SMTP_DISABLE=true
+INVENTORY_COST_EFFECTIVE_DATE_ENABLED=true
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=development
 
