--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ SMTP_USER=your_gmail_username
 SMTP_PASS=your_gmail_app_password
 SMTP_FROM=LedgerLite <no-reply@ledgerlite.local>
 SMTP_DISABLE=false
+INVENTORY_COST_EFFECTIVE_DATE_ENABLED=true
 
 WEB_PORT=3000
 NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
