--- a/.env.development.example
+++ b/.env.development.example
@@ -10,6 +10,10 @@ API_CORS_ORIGIN=https://dev-app.example.com
 WEB_BASE_URL=https://dev-app.example.com
 SMTP_DISABLE=true
 INVENTORY_COST_EFFECTIVE_DATE_ENABLED=true
+INVENTORY_COST_HIGH_PRECISION_QTY_ENABLED=true
+NEGATIVE_STOCK_POLICY_ENABLED=true
+INVITE_LIFECYCLE_ENABLED=true
+ONBOARDING_CHECKLIST_ENABLED=true
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=development
 
