--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc -p tsconfig.typecheck.json --noEmit",
     "test": "jest --config jest.config.js",
     "test:e2e": "jest --config jest.config.js --runInBand",
+    "test:sprint1:smoke": "jest --config jest.config.js --runInBand test/inventory.tracking.e2e-spec.ts test/invites.email.e2e-spec.ts test/onboarding.e2e-spec.ts src/common/inventory-cost.spec.ts src/modules/bills/bills.service.spec.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:seed": "prisma db seed"
