feat(web): add release identity footer and public UX refresh

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -24,3 +24,5 @@ DATABASE_URL=postgresql://ledgerlite:replace_with_db_password@db:5432/ledgerlite
 # WEB
 NEXT_PUBLIC_API_BASE_URL=https://api.example.com
 NEXT_PUBLIC_APP_VERSION=prod-local
+NEXT_PUBLIC_ENVIRONMENT_LABEL=PROD
+NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED=false
