--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -28,6 +28,8 @@ services:
       args:
         NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:?NEXT_PUBLIC_API_BASE_URL is required}
         NEXT_PUBLIC_APP_VERSION: ${NEXT_PUBLIC_APP_VERSION:-local-dev}
+        NEXT_PUBLIC_ENVIRONMENT_LABEL: ${NEXT_PUBLIC_ENVIRONMENT_LABEL:-DEV}
+        NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED: ${NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED:-true}
     env_file:
       - .env.development
     ports:
