--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ ONBOARDING_CHECKLIST_ENABLED=true
 
 WEB_PORT=3000
 NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
+NEXT_PUBLIC_APP_VERSION=local-dev
+NEXT_PUBLIC_ENVIRONMENT_LABEL=DEV
+NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED=true
 NEXT_PUBLIC_SENTRY_DSN=
 
 SENTRY_DSN=
