--- a/.env.staging.example
+++ b/.env.staging.example
@@ -24,3 +24,5 @@ DATABASE_URL=postgresql://ledgerlite:replace_with_db_password@db:5432/ledgerlite
 # WEB
 NEXT_PUBLIC_API_BASE_URL=https://staging-api.example.com
 NEXT_PUBLIC_APP_VERSION=staging-local
+NEXT_PUBLIC_ENVIRONMENT_LABEL=STAGE
+NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED=true
