--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -6,6 +6,10 @@ ARG NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
 ENV NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
 ARG NEXT_PUBLIC_APP_VERSION=local-dev
 ENV NEXT_PUBLIC_APP_VERSION=${NEXT_PUBLIC_APP_VERSION}
+ARG NEXT_PUBLIC_ENVIRONMENT_LABEL=DEV
+ENV NEXT_PUBLIC_ENVIRONMENT_LABEL=${NEXT_PUBLIC_ENVIRONMENT_LABEL}
+ARG NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED=false
+ENV NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED=${NEXT_PUBLIC_NON_PROD_SAFETY_BANNER_ENABLED}
 
 COPY package.json pnpm-workspace.yaml turbo.json ./
 COPY apps/web/package.json apps/web/package.json
