feat(auth): add email verification flow and setup docs

--- a/.env.development.example
+++ b/.env.development.example
@@ -6,6 +6,7 @@ API_JWT_SECRET=replace_with_long_random_secret
 API_JWT_REFRESH_SECRET=replace_with_long_random_secret
 API_JWT_ACCESS_TTL=900
 API_JWT_REFRESH_TTL=1209600
+EMAIL_VERIFICATION_TTL_HOURS=24
 API_CORS_ORIGIN=https://dev-app.example.com
 WEB_BASE_URL=https://dev-app.example.com
 SMTP_DISABLE=true
