--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ API_JWT_SECRET=dev_access_secret
 API_JWT_REFRESH_SECRET=dev_refresh_secret
 API_JWT_ACCESS_TTL=900
 API_JWT_REFRESH_TTL=1209600
+EMAIL_VERIFICATION_TTL_HOURS=24
 API_CORS_ORIGIN=http://localhost:3000
 WEB_BASE_URL=http://localhost:3000
 SMTP_HOST=smtp.gmail.com
