feat(api): add observability baseline and swagger hardening

--- a/.env.development.example
+++ b/.env.development.example
@@ -17,6 +17,10 @@ INVITE_LIFECYCLE_ENABLED=true
 ONBOARDING_CHECKLIST_ENABLED=true
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=development
+API_SWAGGER_ENABLED=true
+API_SWAGGER_PATH=docs
+API_SWAGGER_REQUIRE_AUTH=false
+API_SWAGGER_AUTH_TOKEN=
 
 # DB (same password as db service in docker-compose.development.yml)
 POSTGRES_PASSWORD=replace_with_db_password
