--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ NEXT_PUBLIC_SENTRY_DSN=
 
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=development
+API_SWAGGER_ENABLED=true
+API_SWAGGER_PATH=docs
+API_SWAGGER_REQUIRE_AUTH=false
+API_SWAGGER_AUTH_TOKEN=
