--- a/.env.staging.example
+++ b/.env.staging.example
@@ -17,6 +17,10 @@ INVITE_LIFECYCLE_ENABLED=true
 ONBOARDING_CHECKLIST_ENABLED=true
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=staging
+API_SWAGGER_ENABLED=true
+API_SWAGGER_PATH=docs
+API_SWAGGER_REQUIRE_AUTH=true
+API_SWAGGER_AUTH_TOKEN=replace_with_staging_swagger_token
 
 # DB (same password as db service in docker-compose.staging.yml)
 POSTGRES_PASSWORD=replace_with_db_password
