--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}
+          timeout: 60s
+          command_timeout: 30m
           script_stop: true
           script: |
             set -euo pipefail
@@ -58,6 +60,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}
+          timeout: 60s
+          command_timeout: 30m
           script_stop: true
           script: |
             set -euo pipefail
@@ -82,6 +86,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}
+          timeout: 60s
+          command_timeout: 30m
           script_stop: true
           script: |
             set -euo pipefail
