--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -19,7 +19,12 @@ COPY apps/web apps/web
 COPY packages/shared packages/shared
 
 RUN corepack enable && corepack prepare pnpm@9.12.0 --activate
-RUN pnpm install --filter ./apps/web... --filter ./packages/shared...
+RUN pnpm config set fetch-retries 5 \
+ && pnpm config set fetch-retry-factor 2 \
+ && pnpm config set fetch-retry-mintimeout 10000 \
+ && pnpm config set fetch-retry-maxtimeout 120000 \
+ && pnpm config set network-timeout 600000
+RUN pnpm install --frozen-lockfile --prefer-offline --filter ./apps/web... --filter ./packages/shared...
 RUN pnpm -C /app/packages/shared build
 
 WORKDIR /app/apps/web
