docs: split completed vs pending stories; de-scope onboarding gates

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,8 @@ INVENTORY_COST_EFFECTIVE_DATE_ENABLED=true
 INVENTORY_COST_HIGH_PRECISION_QTY_ENABLED=true
 NEGATIVE_STOCK_POLICY_ENABLED=true
 INVITE_LIFECYCLE_ENABLED=true
-ONBOARDING_CHECKLIST_ENABLED=true
+# NOTE: onboarding checklist is currently de-scoped; keep this false unless re-introduced.
+ONBOARDING_CHECKLIST_ENABLED=false
 
 WEB_PORT=3000
 NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
