--- a/.env.prod.example
+++ b/.env.prod.example
@@ -14,7 +14,8 @@ INVENTORY_COST_EFFECTIVE_DATE_ENABLED=true
 INVENTORY_COST_HIGH_PRECISION_QTY_ENABLED=true
 NEGATIVE_STOCK_POLICY_ENABLED=true
 INVITE_LIFECYCLE_ENABLED=true
-ONBOARDING_CHECKLIST_ENABLED=true
+# NOTE: onboarding checklist is currently de-scoped; keep this false unless re-introduced.
+ONBOARDING_CHECKLIST_ENABLED=false
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=production
 API_SWAGGER_ENABLED=true
