--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/throttler": "^6.5.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@aws-sdk/client-s3": "^3.832.0",
     "@sentry/node": "^10.35.0",
     "argon2": "^0.44.0",
     "cookie-parser": "^1.4.7",
