--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.832.0",
     "@ledgerlite/shared": "workspace:*",
     "@nestjs/common": "^11.1.12",
     "@nestjs/config": "^4.0.2",
@@ -29,16 +30,16 @@
     "@nestjs/throttler": "^6.5.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "@aws-sdk/client-s3": "^3.832.0",
     "@sentry/node": "^10.35.0",
     "argon2": "^0.44.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "helmet": "^8.1.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.10.0",
+    "pg": "^8.13.1",
     "pino": "^10.2.1",
     "pino-http": "^11.0.0",
-    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "zod": "^4.3.5"
@@ -49,6 +50,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.9",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
